Summary: VMIC, VMC, OVF API - Resolved a number of bugs (hopefully without introducing any others).